{
    "@@locale": "es",
    "title": "Adrenalux",

    "home": "Inicio",
    "collection": "Colección",
    "friends": "Amigos",
    "games": "Partidas",

    "search": "Buscar",

    "settings": "Ajustes",
    "switch_theme": "Cambiar modo oscuro/claro",
    "log_out": "Cerrar sesión",
    "language": "Idioma",
    "pick_language": "Selecciona un idioma",
    "spanish": "Español",
    "english": "Inglés",
    "info": "Información",
    "info_message": "Aplicación creada por el grupo 05-Carol Shaw",

    "name": "Nombre",
    "lastname": "Apellido",
    "username": "Nombre de usuario",
    "email": "Correo electrónico",
    "password": "Contraseña",
    "password2": "Confirmar contraseña",
    "connectWithUs": "Conéctate con nosotros",
    "signUpMsg": "Regístrate para unirte a nuestra comunidad",
    "signUp": "Regístrate",
    "redirectSignIn": "¿Ya tienes una cuenta? Inicia sesión",
    "rights": "Todos los derechos reservados.",

    "nameRequired": "El nombre es obligatorio",
    "lastnameRequired": "El apellido es obligatorio",
    "usernameRequired": "El nombre de usuario es obligatorio",
    "emailRequired": "El correo es obligatorio",
    "invalidEmail": "Ingresa un correo válido",
    "passwordRequired": "La contraseña es obligatoria",
    "passwordMinLength": "La contraseña debe tener al menos 6 caracteres",
    "confirmPasswordRequired": "La confirmación de contraseña es obligatoria",
    "passwordsDoNotMatch": "Las contraseñas no coinciden",
    "connectionError": "Error de conexión: {error}",
    "tokenNotReceived": "No se recibió un token válido",

    "sign_in": "Iniciar sesión",
    "welcome": "¡Bienvenido!",
    "credentials": "Introduzca sus credenciales",
    "email": "Correo electrónico",
    "password": "Contraseña",
    "redirect_sign_up": "¿Aún no tienes una cuenta? Registrarse",
    "rights": "© 2025 AdrenaLux. Todos los Derechos Reservados",

    "sign_up": "Registrarse",
    "connect_with_us": "¡Conecta con nosotros!",
    "sign_up_msg": "Regístrate para comenzar a jugar",
    "name": "Nombre",
    "lastname": "Apellidos",
    "username": "Nombre de usuario",
    "password2": "Confirma la contraseña",
    "redirect_sign_in": "¿Ya tienes una cuenta? Iniciar Sesión",

    "err_user_data": "Error cargando datos iniciales",
    "err_no_packs": "No hay sobres disponibles",
    "err_no_collection": "La colección no está disponible",
    "err_money": "No tienes dinero suficiente para abrir este sobre",
    "err_pack": "Hubo un error al abrir el sobre",
    "no_achievements": "Aún no has conseguido ningún logro",
    "all_achievements": "Ver todos los logros",
    "achievements": "Logros",
    "new_achievement": "Uno o mas logros desbloqueados!",
    "achievement_unlocked": "Logro desbloqueado",
    "market": "Mercado",
    "exchange": "Intercambio",
    "redirect_sign_in": "¿Ya tienes una cuenta? Iniciar Sesión",
    "open_pack": "Abrir gratis",

    "new_cards": "Cartas obtenidas",
    "return_msg": "Volver",

    "choose_pfp": "Seleccionar foto de perfil",
    "cancel": "Cancelar",
    "confirm": "Confirmar",
    "update_pfp": "Foto de perfil actualizada correctamente",
    "err_update_pfp": "Se ha producido un error al cambiar la foto de perfil",
    "friend_id": "ID Amigo",
    "friend_id_copied": "ID amigo copiado al portapapeles",
    "level": "Nvl",
    "xp": "Exp",
    "update_username": "Editar nombre de usuario",
    "username_updated": "Nombre de usuario actualizado correctamente",
    "err_update_username": "Se ha producido un error al cambiar el nombre de usuario",
    "save": "Guardar",
    "no_games_msg": "Parece que no has jugado ninguna partida, ¡anímate!",
    "win": "Victoria",
    "defeat": "Derrota",
    "paused": "En pausa",
    "draw": "Empate",
    "no_games_msg": "Parece que no has jugado ninguna partida, ¡anímate!",

    "order": "Ordenar",
    "order_by_team": "Por equipo",
    "order_by_rarity": "Por rareza",
    "order_by_position": "Por posición",

    "card_on_sale": "Carta en venta",
    "sell": "Vender",
    "on_sale": "En Venta",
    "confirm_sale_title": "Confirmar venta",
    "confirm_sale_message": "¿Realmente deseas vender la carta?",
    "team": "Equipo",
    "position": "Posición",

    "buy_confirm": "¿Quieres comprar esta carta por",
    "card_added": "Carta añadida a tu colección",
    "accept": "Aceptar",
    "daily_luxuries": "Luxuries del día",
    "no_cards_found": "No se encontraron cartas",
    "no_cards_available": "No hay cartas disponibles",
    "card_removed_from_market": "Carta eliminada del mercado",
    "failed_to_remove_card": "No se pudo eliminar la carta del mercado",

    "set_sale_price": "Establecer precio de venta",
    "price": "Precio",
    "sell_for": "Vender por",
    "invalid_price": "Precio no válido",
    "confirm": "Confirmar",

    "tcg": "Trading Card Game",
    "touch_start": "Toca para comenzar",

    "global_laderboard": "Clasificación Global",
    "friend_laderboard": "Clasificación Amigos",
    "err_laderboard": "No ha sido posible encontrar la clasificación.",
    "draft": "Plantilla",
    "match": "Partida",
    "tournament": "Torneos",

    "you": "Tú",
    "opponent": "Rival",
    "cancel_exchange": "Cancelar Intercambio",
    "exchange_canceled": "El intercambio fue cancelado",
    "cancel_exchange_msg": "¿Quieres cancelar el intercambio?",
    "confirm_exchange": "Confirmar Intercambio",
    "cant_select": "Selección deshabilitada\n durante el intercambio",
    "abandon": "Abandonar",
    "match": "Partida",
    "tournament": "Torneos",

    "err_battle": "El usuario debe estar conectado para jugar",
    "waiting_battle": "Solicitando partida",
    "cancel_battle": "Cancelar solicitud",
    "err_cancel_battle": "Error al cancelar la solicitud",

    "err_load_friend_req": "Error al cargar solicitudes",
    "err_load_friends": "Error al cargar amigos",
    "add_friend": "Añadir amigo",
    "friend_code": "Código de amigo",
    "add": "Añadir",
    "no_friends": "No tienes amigos agregados",
    "no_friend_req": "No hay solicitudes pendientes",
    "requests": "Solicitudes",
    "friend_request_sent" : "Solicitud de amistad enviada",
    "request_already_sent" : "Ya eres amigo de este usuario",
    "friend_request_accepted" : "Solicitud de amistad aceptada",
    "friend_request_declined" : "Solicitud de amistad rechazada",
    "err_accept_friend_request" : "No se pudo aceptar la solicitud de amistad",
    "err_decline_friend_request" : "No se pudo rechazar la solicitud de amistad",
    "err_exchange" : "No se puede intercambiar con usuarios desconectados",
    "friend_deleted" : "Amigo eliminado",
    "err_friend_deleted" : "Hubo un error al eliminar un amigo",
    "disconnected" : "desconectado",
    "connected" : "en línea",
    "no_games_friend" : "Este jugador aún no ha jugado ninguna partida",
    "delete_friends_text" : "Eliminar amigo",
    "delete_friends_confirmation" : "Quieres continuar con la eliminación de tu amigo",

    "waiting": "Esperando a",
    "err_cancel_exchange": "Error al cancelar intercambio",
    "choose_player": "Elije un jugador para intercambiar",
    "waiting_response": "Esperando respuesta...",
    "exchange_accepted": "Intercambio aceptado",
    "exchange_declined": "Intercambio rechazado",
    "exchange_invitation": "Invitación de intercambio de",
    "loading_user": "Cargando usuario...",

    "loading" : "Cargando",

    "incomplete_draft" : "Plantilla incompleta",
    "no_draft_selected" : "No has seleccionado ninguna plantilla",
    "searching_match" : "Buscando partida",

    "choose_game_option": "Elegir opción de juego",
    "quick_match": "Partida rápida",
    "resume_paused": "Continuar partidas",
    "paused_games": "Partidas pausadas",
    "no_paused_games": "No hay partidas pausadas",
    "no_paused_games_message": "No tienes partidas en pausa para reanudar",
    "loading_paused_games": "Cargando partidas pausadas...",
    "failed_fetch_paused": "Error al obtener partidas pausadas",

    "err_no_coins": "No tienes suficientes adrenacoins",

    "resuming_match": "Continuar partida",
    "loading_match_data": "Cargando los datos de la partida",

    "or": "O",
    "sign_in_google": "Iniciar sesión con Google",

    "new_template": "Nueva plantilla",
    "template_name_hint": "Nombre de la plantilla",
    "create": "Crear",
    "error_loading_templates": "Error cargando plantillas:",
    "no_draft_selected": "Ninguna plantilla seleccionada",
    "no_templates": "Sin plantillas",
    "drafts": "Plantillas",
    "select_a_template": "Selecciona una plantilla",
    "no_templates_created": "No hay plantillas creadas",
    "template_deleted": "Plantilla borrada",
    "error_deleting_template": "Error al borrar la plantilla",

    "template_incomplete": "Plantilla incompleta",
    "template_incomplete_message": "Debes seleccionar todos los jugadores antes de guardar",
    "error_creating_template": "Error creando plantilla",
    "template_created_success": "Plantilla creada correctamente",
    "error_saving": "Error al guardar",
    "error_saving_message": "Error:",
    "error_loading_players": "Error cargando jugadores",
    "exit_without_saving": "¿Salir sin guardar?",
    "unsaved_changes_warning": "Tienes cambios sin guardar que se perderán",
    "exit": "Salir",
    "draft": "Plantilla",
    "select_player": "Seleccionar jugador",
    "ok": "OK",
    "main_menu": "Menú principal",
    "earned_points": "Puntos obtenidos",

    "rival": "Rival",
    "select_ability": "Seleccionar habilidad",
    "ability_shot": "Tiro",
    "ability_control": "Control",
    "ability_defense": "Defensa",
    "request_pause": "Solicitar pausa",
    "pause_request_message": "¿Quieres solicitar una pausa?",
    "confirm_surrender": "Confirmar rendición",
    "confirm_surrender_message": "¿Estás seguro de que quieres rendirte?",
    "choose_a_card": "Elige una carta",
    "waiting_for_selection": "Esperando elección...",
    "pause": "Pausar",
    "surrender": "Rendirse",
    "card_already_used": "¡Esta carta ya fue utilizada!",
    "select_position": "Debes seleccionar un",

    "tournamentQuarterFinals": "Cuartos de final",
    "tournamentSemiFinals": "Semifinales",
    "tournamentFinal": "Final",
    "nextMatchStartingSoon": "La próxima partida comenzará en breves",
    "nextMatchIn": "Próxima partida en:\n",
    "startTournament": "Iniciar torneo",
    "leaveTournament": "Abandonar torneo",
    "leaveTournamentTitle": "Abandonar Torneo",
    "leaveTournamentMessage": "¿Estás seguro de que deseas abandonar el torneo?",
    "tournamentStartedSuccess": "¡Torneo iniciado con éxito!",
    "tournamentStartedError": "Error al iniciar el torneo",
    "tournamentLeaveSuccess": "Has abandonado el torneo con éxito",
    "tournamentLeaveError": "Error al abandonar el torneo",

    "tournamentsTitle": "Torneos",
    "createTournament": "Crear",
    "globalTournaments": "Global",
    "tournamentName": "Nombre del torneo",
    "optionalPassword": "Contraseña (opcional)",
    "prize": "Premio",
    "description": "Descripción",
    "defaultDescription": "El mejor torneo",
    "joinTournamentTitle": "Unirse a un torneo",
    "confirmJoin": "Confirmar",
    "createTournamentTitle": "Crear torneo",
    "tournamentCreated": "Torneo creado",
    "invalidNameError": "Nombre inválido (3-20 caracteres)",
    "invalidPrizeError": "Premio inválido (Número)",
    "invalidDescriptionError": "Descripción no válida",
    "activeTournamentsEmpty": "No hay torneos activos",
    "participantsCount": "participantes",
    "joinButton": "Unirse",
    "closedButton": "Cerrado",
    "statusOpen": "Abierto",
    "statusInProgress": "En progreso",
    "statusFinished": "Terminado",
    "loadTournamentsError": "Error al cargar torneos:",
    "accessTournamentError": "Error al acceder al torneo:",
    "cant_play_while_tournament": "No puede jugar partidas mientras estas en torneo",

    "requiredField": "Este campo es obligatorio",
    "minChars": "Mínimo 3 caracteres",
    "maxNameChars": "Máximo 20 caracteres",
    "maxPasswordChars": "Máximo 100 caracteres",
    "validNumber": "Debe ser un número válido",
    "invalidChars": "Caracteres inválidos",
    "err_sign_out": "Error al cerrar sesión",
    "must_select_card": "Debes seleccionar una carta",
    "try_again": "Volver a intentar",
    "err_load_collection": "No se pudo cargar la colección",
    "err_load_daily_cards": "Error al cargar las cartas diarias",

    "exchangeCompletedSuccess": "¡Intercambio completado con éxito!",
    "notificationDefault": "Nueva notificación",
    "accept": "Aceptar",
    "errorAccepting": "Error al aceptar: ",
    "matchPaused": "Partida pausada",
    "pauseRequestReceived": "Solicitud de pausa recibida",
    "resumeRequestReceived": "Solicitud de reanudación recibida",
    "matchRequestReceived": "Solicitud de partida de",
    "matchRequestCancelled": "Solicitud de partida cancelada"
}