...
                        ),
                        borderRadius: BorderRadius.circular(11),
                      ),
                      child: _isOnSale
                          ? Center(
                              child: Text(
                                key: Key('on-sale-text'),
                                AppLocalizations.of(context)!.on_sale,
                                style: TextStyle(
                                  color: Colors.white,
                                  fontSize: screenSize.height * 0.025,
                                ),
                              ),
...
                                Padding(
                                  padding: EdgeInsets.only(
                                      left: screenSize.width * 0.05),
                                  child: Row(
                                    children: [
                                      Text(
                                        key: Key('sell-text'),
                                        AppLocalizations.of(context)!.sell,
                                        style: TextStyle(
                                          color: Colors.white,
                                          fontSize:
                                              screenSize.height * 0.025,
                                        ),
...
